syntax="proto3";
package peer;

option java_package="com.proto.peer";
option java_multiple_files=true;

message TokenRequest{
  bool input=1;
}

message TokenResponse{
  bool result=1;
}